# constrained_speed

./: CMakeLists.txt  README.md  constrained_speed_plugin.xml  package.xml  speed_analysis.xml
cfg/: cs_method2.yaml
cfg/6t/default/: cs_method1.params  cs_method1.yaml
cfg/north_cola/default/: cs_method1.params  cs_method1.yaml
config/: constrained_speed_config.yaml
include/: CSMethod1.hpp  CSMethod2.hpp  ConstrainedSpeedAnalysis.hpp  ConstrainedSpeedNodelet.hpp  DEFINEs.hpp  Points_Attributes.hpp  ThreeOnePublish.hpp  Toyota.hpp
include/shawn/: SJerk.hpp  SThreePointsCurvature.hpp
launch/: 6t.launch  constrained_speed_analysis.launch  constrained_speed_node.launch  constrained_speed_nodelet.launch  constrained_speed_only_analysis.launch  north_cola.launch  toyota.launch
src/: CSMethod1.cpp  CSMethod2.cpp  ConstrainedSpeedAnalysis.cpp  ConstrainedSpeedNode.cpp  ConstrainedSpeedNodelet.cpp  Points_Attributes.cpp  analysis.py
