<?xml version="1.0"?>
<package format="2">
  <name>constrained_speed</name>
  <version>0.0.0</version>
  <description>The constrained_speed_nodelet package</description>

  <maintainer email="shawn@todo.todo">shawn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>plan2control_msgs</depend>
  <depend>anm_msgs</depend>
  <depend>roslib</depend>
  <depend>speed_debug_msgs</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_driver_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/constrained_speed_plugin.xml" />
    <nodelet plugin="${prefix}/speed_analysis.xml" />
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
