<?xml version="1.0"?>
<package format="2">
  <name>constrained_speed</name>
  <version>0.0.0</version>
  <description>The constrained_speed_nodelet package</description>

  <maintainer email="shawn@todo.todo">shawn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosparam_handler</build_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>plan2control_msgs</depend>
  <depend>speed_debug_msgs</depend>
  <depend>dymidetect2speed_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_driver_msgs</depend>
  <depend>speed_ctrl_msgs</depend>
  <depend>lanelet_map_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!--<nodelet plugin="${prefix}/constrained_speed_plugin.xml" />-->
    <!--<nodelet plugin="${prefix}/speed_analysis.xml" />-->
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
